kubernetes/base/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: nbiot-detector
spec:
  ingressClassName: nginx
  rules:
    - host: main.app.tuan-lnm.cloud
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nbiot-detector-app-nbiot-detector
                port:
                  number: 8000
            path: /
