kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: nbiot-detector
spec:
  ingressClassName: nginx
  rules:
    - host: app.$EXTERNAL_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: app-nbiot-detector
                port:
                  number: 8000
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.$EXTERNAL_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.$EXTERNAL_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: tracing
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.$EXTERNAL_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: jaeger-all-in-one
                port:
                  number: 16686
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.$EXTERNAL_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
            path: /
